ukui-search (0.3.0+0401) v101; urgency=medium

  * Remove qtwebengineview dependence, remove web page load function.
    - 移除了网页加载功能，点击网页搜索直接跳转到浏览器。
  * Use kwin effect for settings widget.
    - 设置页面使用了窗管特效，避免了失焦变黑的问题(45200)。

 -- zhangpengfei <zhangpengfei@kylinos.cn>  Thu, 01 Apr 2021 11:38:51 +0800

ukui-search (0.2.0+0330) v101; urgency=medium

  * Fix:Title bar will appear if open mainwindow which closed in panel.
    - 修复了从任务栏预览窗关闭搜索后再打开搜索会出现两个标题栏的问题。
  * Add function of historycal record.
    - 增加搜索历史记录功能。
  * Fix:Add support for polysyllabic character in app search and settings
    search.
    - 在应用搜索和设置搜索中增加对多音字的支持(43441,46289)。

 -- zhangpengfei <zhangpengfei@kylinos.cn>  Tue, 30 Mar 2021 09:52:15 +0800

ukui-search (0.2.0+0325) v101; urgency=medium

  * Changed name displayed in ukui-menu from 'ukui-search' to 'Search'.
    - 更改了英文模式下开始菜单中显示的名字。

 -- zhangpengfei <zhangpengfei@kylinos.cn>  Thu, 25 Mar 2021 11:00:09 +0800

ukui-search (0.2.0+0322) v101; urgency=medium

  * Fit muti-screens mode. 
    - 适配990多屏显示。
  * Feat:Clear cache after web searching.
    - 清除网页搜索缓存。
  * Fix(frontend): Complete translations.
    - 修复提示框按钮未汉化问题(bug38128)。
  * Fix(frontend): NameLabel do not update when font-size changed.
    - 修复字体大小更改时主页标签不刷新的bug(bug42681)。
  * Feat(frontend): Reset geometry for ukui-search.
    - 重新计算搜索主界面的显示位置,修复任务栏隐藏时主界面显示位置有误的问题(43730)。
  * Fix(frontend): Mainwindow is blocked when searching.
    - 修复搜索时主界面阻塞的问题(43315)。
  * Fix:mkfifo fail when fifo path is not exits
    - 修复切换用户后打开搜索失败的问题(42486)。
  * Feat(frontend): Add tips when there is no network avaliable.
    - 当无网络可用时添加提示图案。

 -- zhangpengfei <zhangpengfei@kylinos.cn>  Mon, 22 Mar 2021 10:43:51 +0800

ukui-search (0.2.0+0312) v101; urgency=medium

  * Fix: Index process may crash while system first boot.
    - 解决了系统首次启动时偶现的崩溃问题。
  * Fix: File with space in name can not be opened.
    - 修复文件名带空格时无法从最近打开列表打开的问题 
  * Feature: Add app description.
    - 为未安装应用添加应用描述栏.